--- a/redux-app/public/index.html
+++ b/redux-app/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Concert+One&family=Langar&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Concert+One&family=Langar&family=Pacifico&family=VT323&display=swap" rel="stylesheet">
     <meta
       name="description"
       content="App that uses redux-thunk, react, and axios to consume an api"
